--- a/Assignment/SanPham.css
+++ b/Assignment/SanPham.css
@@ -2,7 +2,7 @@
 }
 
 .wrapper{ background-color: rgb(235, 232, 232);margin: 0px;width: 100%;height: 2000px; font-family: 'Montserrat', sans-serif;}
-    .nav{ background-color: #003868; display: flex; justify-content: space-between; align-items: center; position: fixed; padding:15px 10px 2px 10px;  height: 50px; width: 100%; font-size: 30px;}
+    .nav{ background-color: #003868; opacity: 0.9; box-shadow: 0 0 5px 5px gray; display: flex; justify-content: space-between; align-items: center; position: fixed; padding:15px 10px 2px 10px;  height: 50px; width: 100%; font-size: 30px;}
         .nav ul{ display: flex;  list-style: none; width: 60%;}
             .nav ul li{ margin: 5px 15px; position: relative;}
             .nav ul li:hover ul{ display: block; }
