--- a/Assignment/index.css
+++ b/Assignment/index.css
@@ -4,14 +4,22 @@
 }
 
 .wrapper{ background-color: rgb(235, 232, 232);margin: 0px;width: 100%;height: 2000px; display: flex;flex-direction: column;font-family: 'Montserrat', sans-serif;}
-    .nav{ background-color: #003868; display: flex; flex-direction: row; justify-content: space-between; align-items: center; position: fixed; padding:15px 10px 2px 10px; height: 50px; width: 100%; font-size: 30px;}
+    .nav{ background-color: #003868; opacity: 0.9; box-shadow: 0 0 5px 5px gray; display: flex; flex-direction: row; justify-content: space-between; align-items: center; position: fixed; padding:15px 10px 2px 10px; height: 50px; width: 100%; font-size: 30px;}
     .nav a{ flex-direction: row; justify-content: space-between;}
     .nav :hover{ color: rgb(136, 197, 253);}            
         .nav-left{ width: 600px; display: flex; flex-direction: row; justify-content:space-between;}
             .nav a span{ font-size: 40px;}
         .ic-lgr{ padding-right: 10px;}
-    .banner{ background-image: url(./Images/pepsi_banner.png); height: 500px; background-repeat: no-repeat; background-size: cover; margin-top: 90px;}
-button{ position:relative   ; left: 600px; width: 200px; height: 40px; top:88%; border:none ; background-color: #b9deff; border-radius: 25px; color: #003868; opacity: 1; font-size: 20px; font-family: 'Montserrat', sans-serif; box-shadow: 0 5px 3px 0 #044dd4; transition: 0.5s; cursor: pointer; }        button:active{ box-shadow: none; transform: translateY(5px) ; opacity: 0.8;}
+    .banner{ background-image: url(./Images/pepsi_banner.png); height: 500px; background-repeat: no-repeat; background-size: cover; margin-top: 90px; }
+    /* video {
+        width: 50vw;
+        height: 100vh;
+        position: fixed; 
+        top: 0;
+        left: 0; */
+        /* object-fit: cover; } */
+    
+        button{ position:relative   ; left: 600px; width: 200px; height: 40px; top:88%; border:none ; background-color: #b9deff; border-radius: 25px; color: #003868; opacity: 1; font-size: 20px; font-family: 'Montserrat', sans-serif; box-shadow: 0 5px 3px 0 #044dd4; transition: 0.5s; cursor: pointer; }        button:active{ box-shadow: none; transform: translateY(5px) ; opacity: 0.8;}
     .content{ width: 100%; display: flex; flex-direction: row; }
         .content img{ justify-content: space-between; padding: 10px;}
     .content2{ width: 100%; display: flex; height: 500px; flex-direction: column; margin-bottom: 20px;}
