--- a/Assignment/SanPham.css
+++ b/Assignment/SanPham.css
@@ -18,10 +18,10 @@
     .title {grid-area: title;} .prod-1{ grid-area: prod-1;} .prod-2{ grid-area: prod-2;} .prod-3{ grid-area: prod-3;} .prod-4{ grid-area: prod-4;} .prod-5{ grid-area: prod-5;}
         /* --- */
     .product{ 
-        display: grid; grid-template-areas:' title title title title title' 'prod-1 prod-2 prod-3 prod-4 prod-5'; gap: 3px; background-color: #e4e4e4; width: 100%; height: 500px; padding-top: 68px; margin: 0px 5px; }
+        display: grid; grid-template-areas:' title title title title title' 'prod-1 prod-2 prod-3 prod-4 prod-5'; gap: 3px; background-color: #e4e4e4; width: 100%; height: 500px; padding-top: 68px; margin: 0px 5px;overflow: hidden; }
         .product>div{ background-color: #e4e4e4; background-repeat: no-repeat;   padding: 0 5px; width: 100%; height: 400px; border-radius: 5px;}
         .title{ display: flex; margin-left: 20px; padding: 0px; align-items: center; font-family: 'Montserrat', sans-serif; color: #003868; font-size: 25px;}
-            .buy{ width: 249px; display: flex; flex-direction: column; justify-content: center; position: absolute; height: 75px; margin: 325px 0 0 -4px; border: none;  border-radius: 5px; background-color: #5eb2fc;  opacity: 0.5;  transition: 1s; }
+            .buy{ width: 249px; display: flex; flex-direction: column; justify-content: center; position: absolute; height: 75px; margin: 325px 0 0 -4px; border: none;  border-radius: 5px; background-color: #5eb2fc;  opacity: 0.4;  transition: 1s; }
             .product>div:hover .buy{ height: 325px; margin: px; transition: 0.5s; transform: translateY(-325px); opacity: 0.8; }
                 .order{ display: flex; flex-direction: row; justify-content:space-around; height: 30px; width: 200px; margin: 2px 10px; }
                 .buy button{ margin: 0px 35px; width: 150px; align-items: center; border: none; background-color: #e4e4e4; border-radius: 25px; color: #003868; opacity: 1; font-size: 20px; font-family: 'Montserrat', sans-serif; box-shadow: 0 5px 3px 0 #044dd4; transition: 0.5s; cursor: pointer; }
