--- a/Assignment/index.css
+++ b/Assignment/index.css
@@ -3,39 +3,49 @@
     padding: 0;
 }
 
-.wrapper{ background-color: rgb(235, 232, 232);margin: 0px;width: 100%;height: 2000px; display: flex;flex-direction: column;font-family: 'Montserrat', sans-serif;}
-    .nav{ background-color: #003868; opacity: 0.9; box-shadow: 0 0 5px 5px gray; display: flex; flex-direction: row; justify-content: space-between; align-items: center; position: fixed; padding:15px 10px 2px 10px; height: 50px; width: 100%; font-size: 30px;}
+.wrapper{ background-color: rgb(235, 232, 232);margin: 0px;width: 100%;height:auto; display: flex;flex-direction: column;font-family: 'Montserrat', sans-serif;}
+    .nav{ background-color: #003868; opacity: 0.9; box-shadow: 0 0 1vh 1vh gray; display: flex; flex-direction: row; justify-content: space-between; align-items: center; position: fixed; padding:3vh 1vw 1.5vh 1vw; height: 4vh; width: 100%; font-size: 30px;}
     .nav a{ flex-direction: row; justify-content: space-between;}
     .nav :hover{ color: rgb(136, 197, 253);}            
-        .nav-left{ width: 600px; display: flex; flex-direction: row; justify-content:space-between;}
+        .nav-left{ width: 50vw; display: flex; flex-direction: row; justify-content:space-between;}
             .nav a span{ font-size: 40px;}
         .ic-lgr{ padding-right: 10px;}
-    .banner{ background-image: url(./Images/pepsi_banner.png); height: 500px; background-repeat: no-repeat; background-size: cover; margin-top: 90px; }
-    /* video {
-        width: 50vw;
-        height: 100vh;
-        position: fixed; 
-        top: 0;
-        left: 0; */
-        /* object-fit: cover; } */
-    
-        button{ position:relative   ; left: 600px; width: 200px; height: 40px; top:88%; border:none ; background-color: #b9deff; border-radius: 25px; color: #003868; opacity: 1; font-size: 20px; font-family: 'Montserrat', sans-serif; box-shadow: 0 5px 3px 0 #044dd4; transition: 0.5s; cursor: pointer; }        button:active{ box-shadow: none; transform: translateY(5px) ; opacity: 0.8;}
-    .content{ width: 100%; display: flex; flex-direction: row; }
-        .content img{ justify-content: space-between; padding: 10px;}
-    .content2{ width: 100%; display: flex; height: 500px; flex-direction: column; margin-bottom: 20px;}
-        .content2 h1{ font-size: 70px; margin: 50px; padding: 0   ; line-height: 100px; color: #003868; border: 3px solid #003868 ; }
-        .cnt2-right{ display: flex; flex-direction: row; width: 1200px; height: 200px;  padding: 0; margin: 0;}
-            iframe{ width: 500px; height: 300px; margin-left: 200px;}
-    footer{ background-color: #003868 ; height: 250px; display: flex; flex-direction: row; justify-content: space-between; align-items: center; }
-        footer img{
-            margin-left: 50px
-        }
-        td{ padding: 5px;}
-        footer a{ padding-left: 10px;}
-        .sub{ display: flex; flex-direction: column; padding-right: 10px;}
-            .sub p{  border: #fff 1px solid; border-radius: 10px; color: #fff;}
+    .banner{ background-image: url(./Images/pepsi_banner.png); height: 85vh; background-repeat: no-repeat; background-size: cover; margin-top: 12vh; }  
+        button{ position:relative   ; left: 45vw; width: 15vw; height: 5vh; top:88%; border:none ; background-color: #b9deff; border-radius: 5vw; color: #003868; opacity: 0.7; font-size: 20px; font-family: 'Montserrat', sans-serif; box-shadow: 0 2vh 1vw 0 #044dd4; transition: 0.5s; cursor: pointer; }        button:active{ box-shadow: none; transform: translateY(2vh) ; opacity: 1;}
+        button :hover{ opacity: 1;}
+        .content{ width: 98%; display: flex; flex-direction: row; justify-content: space-between;}
+        .cnt1-lf{width: 65%;margin-left:1vw;}
+        .cnt1-rt{width: 30%;margin-right:1vw;}
+    .content2{ width: 100%; display: flex; height: 90vh; flex-direction: column;}
+        .content2 h1{ font-size: 70px; margin: 3vh; line-height: 15vh; color: #003868; border: 1vh solid #003868 ; }
+        .cnt2-right{ display: flex; flex-direction: row;  height: 90vh;}
+            iframe{ width: 50vw; height: 50vh; margin: 0 0vh;}
+    footer{ background-color: #003868 ; height: 40vh; display: flex; flex-direction: row; justify-content: space-between; align-items: center; padding: 0 0vw;}
+        td{ padding: 1vh;}
+        footer a{ padding-left: 2vh;}
+        .sub{ display: flex; flex-direction: column; padding-right: 1vh;}
+            .sub p{  border: #fff 1px solid; border-radius: 2vw; color: #fff;}
             .icons{ text-align: center; color: #fff; }
 h1{ font-family: 'Lobster', cursive; color: #5eb2fc; text-align: center; line-height: 90px;}
-p{ color: #000000; padding: 5px 20px 0 20px; text-align: justify; margin-bottom: 15px; line-height: 25px; font-family: 'Noto Sans', sans-serif;}
+p{ color: #000000; padding: 1vh 1vw; text-align: justify; margin-bottom: 1.5vw; line-height: 1vw; font-family: 'Noto Sans', sans-serif;}
 a{ text-decoration: none; padding: 10px 20px 0 20; color: #fff;}
 ul{ list-style: none;}
+@media screen and (max-width: 767px){
+    .wrapper{}
+    .nav{ position: fixed; padding:1vh 0; width: 100vw; height: 2.5vh; font-size: 12px; }
+    .nav-left{ width: 80vw; margin: 0; padding: 0; display: flex; flex-direction: row; justify-content: flex-start  }
+    .nav-left a {margin-left: 2vw;}
+    .ic-mn { width: 5vw;}
+    .nav a span{ font-size: 15px;}
+    .ic-lgr{ padding-right: 1vw;}
+    .banner{height: 30vh; margin-top: 10vh;}
+    .content{margin: 0 1vw;}
+    button{left: 40vw; width: 25vw; height: 3vh; top:23vh; font-size: 15px; box-shadow: 0 1vh 0.5vw 0}
+    h1{  line-height: 5vh;}
+    p{  line-height: 4vw; font-family: 'Noto Sans', sans-serif; display: block;}
+    .content2{  height: 65vh; width: 100%; margin: 0;}
+    .content2 h1{width: 90%; font-size: 20px; margin: 1vh; line-height: 10vh; color: #003868; border: 1vh solid #003868 ;}
+    .cnt2-right{width: 100%; display: flex; height: 50vh; flex-direction: column;}
+        iframe{display: block; width: 100vw; height: 50vh; margin-right: 1vw;}
+        .cnt2-right>p{width: 100vw; height: 30vh; margin: 0 1vw;}
+    }
